// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown matches the snapshots 1`] = `
.c1 > summary {
  list-style: none;
}

.c1 > summary::before {
  display: none;
}

.c1 > summary::-webkit-details-marker {
  display: none;
}

.c0 {
  position: relative;
  display: inline-block;
}

<details
  className="c0 c1"
  open={false}
>
  hi
</details>
`;

exports[`Dropdown matches the snapshots 2`] = `
.c1 > summary {
  list-style: none;
}

.c1 > summary::before {
  display: none;
}

.c1 > summary::-webkit-details-marker {
  display: none;
}

.c0 {
  position: relative;
  display: inline-block;
}

<details
  className="c0 c1"
  open={false}
  title="hi"
>
  hello!
</details>
`;

exports[`Dropdown.Item matches the snapshots 1`] = `
.c0 {
  display: block;
  padding: 4px 10px 4px 15px;
  overflow: hidden;
  color: $get('colors.gray.9');
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0:focus {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0366d6;
}

.c0:hover {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0366d6;
  outline: none;
}

<li
  className="c0"
>
  hi
</li>
`;

exports[`Dropdown.Item matches the snapshots 2`] = `
.c0 {
  display: block;
  padding: 4px 10px 4px 15px;
  overflow: hidden;
  color: $get('colors.gray.9');
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0:focus {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0366d6;
}

.c0:hover {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0366d6;
  outline: none;
}

<li
  className="c0"
>
  hello!
</li>
`;

exports[`Dropdown.Menu matches the snapshots 1`] = `
.c0 {
  background-clip: padding-box;
  background-color: #fff;
  border: 1px solid rgba(27,31,35,0.15);
  border-radius: 4px;
  box-shadow: 0 3px 12px rgba(27,31,35,0.15);
  left: 0;
  list-style: none;
  margin-top: 2px;
  padding: 5px 0 5px 0 !important;
  position: absolute;
  top: 100%;
  width: 160px;
  z-index: 100;
  right: 0;
  left: auto;
}

.c0::before {
  position: absolute;
  display: inline-block;
  content: '';
}

.c0::after {
  position: absolute;
  display: inline-block;
  content: '';
}

.c0::before {
  border: 8px solid transparent;
  border-bottom-color: rgba(27,31,35,0.15);
}

.c0::after {
  border: 7px solid transparent;
  border-bottom-color: #fff;
}

.c0 > ul {
  list-style: none;
}

.c0::before {
  top: -16px;
  right: 9px;
  left: auto;
}

.c0::after {
  top: -14px;
  right: 10px;
  left: auto;
}

<ul
  className="c0"
  direction="sw"
>
  <li>
    1
  </li>
  <li>
    2
  </li>
  <li>
    3
  </li>
</ul>
`;

exports[`Dropdown.Menu matches the snapshots 2`] = `
.c0 {
  background-clip: padding-box;
  background-color: #fff;
  border: 1px solid rgba(27,31,35,0.15);
  border-radius: 4px;
  box-shadow: 0 3px 12px rgba(27,31,35,0.15);
  left: 0;
  list-style: none;
  margin-top: 2px;
  padding: 5px 0 5px 0 !important;
  position: absolute;
  top: 100%;
  width: 160px;
  z-index: 100;
  right: 0;
  left: auto;
}

.c0::before {
  position: absolute;
  display: inline-block;
  content: '';
}

.c0::after {
  position: absolute;
  display: inline-block;
  content: '';
}

.c0::before {
  border: 8px solid transparent;
  border-bottom-color: rgba(27,31,35,0.15);
}

.c0::after {
  border: 7px solid transparent;
  border-bottom-color: #fff;
}

.c0 > ul {
  list-style: none;
}

.c0::before {
  top: -16px;
  right: 9px;
  left: auto;
}

.c0::after {
  top: -14px;
  right: 10px;
  left: auto;
}

<ul
  className="c0"
  direction="sw"
>
  <li>
    1
  </li>
  <li>
    2
  </li>
  <li>
    3
  </li>
</ul>
`;
